--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -3,8 +3,14 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        
+        link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css")
+        link(rel="stylesheet", href="/css/test.css")
         title #{pageTitle}
     body 
         include ../partials/header.pug
         block main
         include ../partials/footer.pug
+        script(src="/js/script.js") 
+        script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js")
+        script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js")  
