--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -1,3 +1,15 @@
-extends ../../layouts/default.pug 
-block main 
-    h1 Trang danh sách sản phẩm
+extends ../../layouts/default.pug
+include ../../mixins/box-head.pug
+block main
+  .container.my-3
+    .col-12
+      +box-head("Danh sách sản phẩm")
+    .col-4.mb-3
+      .product-item
+        .inner-image
+          img(src="https://i.dummyjson.com/data/products/1/thumbnail.jpg", alt="iPhone 9")
+        .inner-content
+          h3.inner-title iPhone 9
+          .inner-price-new 885$
+          .inner-price-old 100$
+          .inner-discount -20%
