--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -1,15 +1,17 @@
 extends ../../layouts/default.pug
 include ../../mixins/box-head.pug
+
 block main
   .container.my-3
     .col-12
       +box-head("Danh sách sản phẩm")
     .col-4.mb-3
-      .product-item
-        .inner-image
-          img(src="https://i.dummyjson.com/data/products/1/thumbnail.jpg", alt="iPhone 9")
-        .inner-content
-          h3.inner-title iPhone 9
-          .inner-price-new 885$
-          .inner-price-old 100$
-          .inner-discount -20%
+      each item in products
+        .product-item
+          .inner-image
+            img(src=item.thumbnail, alt=`Thumbnail of ${item.title}`)
+          .inner-content
+            h3.inner-title #{item.title}
+            .inner-price-new #{item.priceNew}$
+            .inner-price-old #{item.price}$
+            .inner-discount #{item.discountPercentage}%
