--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -1,22 +1,35 @@
 extends ../../layouts/default.pug
+
 block main
-    h1 PRODUCTS MANAGEMENT PAGE
+  h1 PRODUCTS MANAGEMENT PAGE
 
+  .container.mt-5
+    h2.text-center.mb-4 Products List
 
-    .container.mt-5
-      h2.text-center.mb-4 Products List
-      table.table.table-striped.table-bordered
-        thead.table-dark
+    table.table.table-striped.table-bordered
+      thead.table-dark
+        tr
+          th //- Số thứ tự (Serial Number)
+          th Image
+          th Title
+          th Price
+          th Status
+          th Actions
+      tbody
+        each item, index in products
           tr
-            th Product ID
-            th Name
-            th Price
-            th Category
-        tbody
-          each product, index in products
-            tr
-              td #{product.id}
-              td #{product.name}
-              td #{product.price}
-              td #{product.category}
-    
+            td #{index + 1} 
+            td
+              img(src=item.thumbnail, alt=`Image of ${item.title}`, width="50", height="50")
+            td #{item.title} 
+            td #{item.price}$
+            td
+              if(item.status=="active")
+                a(href="#" class="badge badge-success") Hoạt động 
+              else
+                a(href="#" class="badge badge-warning") Dừng hoạt động 
+            td
+              button.btn.btn-primary.btn-sm.mr-2(onclick=`editProduct(${item.id})`)
+                | Edit
+              button.btn.btn-danger.btn-sm(onclick=`deleteProduct(${item.id})`)  
+                | Delete
