--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -3,13 +3,20 @@ extends ../../layouts/default.pug
 block main
   h1 PRODUCTS MANAGEMENT PAGE
 
+  .card.mb-3
+    .card-header Bộ lọc và Tìm kiếm
+    .card-body
+      button(class="btn btn-sm ml-1 btn-outline-success active") Tất cả
+      button(class="btn btn-sm ml-1 btn-outline-success") Hoạt động
+      button(class="btn btn-sm ml-1 btn-outline-success") Dừng hoạt động
+
   .container.mt-5
     h2.text-center.mb-4 Products List
 
     table.table.table-striped.table-bordered
       thead.table-dark
         tr
-          th //- Số thứ tự (Serial Number)
+          th STT 
           th Image
           th Title
           th Price
@@ -18,18 +25,16 @@ block main
       tbody
         each item, index in products
           tr
-            td #{index + 1} 
+            td #{index + 1}
             td
               img(src=item.thumbnail, alt=`Image of ${item.title}`, width="50", height="50")
-            td #{item.title} 
+            td #{item.title}
             td #{item.price}$
             td
-              if(item.status=="active")
-                a(href="#" class="badge badge-success") Hoạt động 
+              if (item.status === "active")
+                a(href="#" class="btn btn-sm ml-1 btn-outline-success") Hoạt động
               else
-                a(href="#" class="badge badge-warning") Dừng hoạt động 
+                a(href="#" class="btn btn-sm ml-1 btn-outline-success") Dừng hoạt động
             td
-              button.btn.btn-primary.btn-sm.mr-2(onclick=`editProduct(${item.id})`)
-                | Edit
-              button.btn.btn-danger.btn-sm(onclick=`deleteProduct(${item.id})`)  
-                | Delete
+              button.btn.btn-primary.btn-sm.mr-2(onclick=`editProduct(${item.id})`)  Edit  
+              button.btn.btn-danger.btn-sm(onclick=`deleteProduct(${item.id})`) Delete
