--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -18,3 +18,4 @@ html(lang="en")
         script(src="/js/script.js") 
         script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js")  
+        script(src="/admin/js/script.js") 
