--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -6,16 +6,11 @@ block main
   .card.mb-3
     .card-header Bộ lọc và Tìm kiếm
     .card-body
-      button(class="btn btn-sm ml-1 btn-outline-success active"
-              button-status=""
-              ) Tất cả
-      button(class="btn btn-sm ml-1 btn-outline-success"
-            button-status ="active"
-      ) Hoạt động
-      button(class="btn btn-sm ml-1 btn-outline-success"
-            button-status = "inactive"
-            ) Dừng hoạt động
-
+      each item in filterStatus
+        button(class=`btn btn-sm ml-1 btn-outline-success ${item.class}`
+                button-status=item.status
+                ) #{item.name}
+      
   .container.mt-5
     h2.text-center.mb-4 Products List
 
