--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -1,5 +1,6 @@
 extends ../../layouts/default.pug
 include ../../mixins/filter-status.pug
+include ../../mixins/search.pug
 block main
   h1 PRODUCTS MANAGEMENT PAGE
 
@@ -10,11 +11,8 @@ block main
         .col-6
           +filter-status(filterStatus)
         .col-6 
-          form(id="form-search")
-            .input-group
-              input(type="text", placeholder="Nhập từ khóa", name="keyword", class="form-control", value=keyword)
-              .input-group-append
-                button(class="btn btn-success", type="submit") Tìm
+          +search(keyword)
+          
   .container.mt-5
     h2.text-center.mb-4 Products List
 
