--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -41,3 +41,18 @@ block main
             td
               button.btn.btn-primary.btn-sm.mr-2(onclick=`editProduct(${item.id})`)  Edit  
               button.btn.btn-danger.btn-sm(onclick=`deleteProduct(${item.id})`) Delete
+
+  nav
+    ul.pagination
+      if(pagination.totalPage > 0)
+        if(pagination.currentPage > 1)
+          li(class="page-item")
+            button(class="page-link" button-pagination=pagination.currentPage - 1) Trang trước
+          //- div #{pagination.currentPage} 
+          - for (var i = 1; i <= pagination.totalPage; i++)
+            li(class=`page-item ${pagination.currentPage == i ? "active" : ""}`)
+              button(class='page-link' button-pagination=i) #{i}
+        
+          if(pagination.currentPage < pagination.totalPage)
+            li(class="page-item")
+                button(class="page-link" button-pagination=pagination.currentPage + 1) Kế tiếp
