--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -43,15 +43,19 @@ block main
               button.btn.btn-danger.btn-sm(onclick=`deleteProduct(${item.id})`) Delete
 
   nav
-    ul.pagination
+    ul(class="pagination")
         if(pagination.currentPage > 1)
+          li(class="page-item" )
+            button(class='page-link' 
+            button-pagination=pagination.currentPage - 1) Previous
+            
+        - for (var i = 1; i <= pagination.totalPage; i++)
+          li(class=`page-item ${pagination.currentPage == i ? "active": ""}`
+            button-pagination=i
+          )
+            button(class='page-link') #{i}
+          
+        if(pagination.currentPage < pagination.totalPage)
           li(class="page-item")
-            button(class="page-link" button-pagination=pagination.currentPage - 1) Trang trước
-          //- div #{pagination.currentPage} 
-          - for (var i = 1; i <= pagination.totalPage; i++)
-            li(class=`page-item ${pagination.currentPage == i ? "active" : ""}`)
-              button(class='page-link' button-pagination=i) #{i}
-        
-          if(pagination.currentPage < pagination.totalPage)
-            li(class="page-item")
-                button(class="page-link" button-pagination=pagination.currentPage + 1) Kế tiếp
+            button(class='page-link'
+            button-pagination = pagination.currentPage + 1) Next
