--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -1,6 +1,7 @@
 extends ../../layouts/default.pug
 include ../../mixins/filter-status.pug
 include ../../mixins/search.pug
+include ../../mixins/pagination.pug
 block main
   h1 PRODUCTS MANAGEMENT PAGE
 
@@ -41,21 +42,5 @@ block main
             td
               button.btn.btn-primary.btn-sm.mr-2(onclick=`editProduct(${item.id})`)  Edit  
               button.btn.btn-danger.btn-sm(onclick=`deleteProduct(${item.id})`) Delete
-
-  nav
-    ul(class="pagination")
-        if(pagination.currentPage > 1)
-          li(class="page-item" )
-            button(class='page-link' 
-            button-pagination=pagination.currentPage - 1) Previous
-            
-        - for (var i = 1; i <= pagination.totalPage; i++)
-          li(class=`page-item ${pagination.currentPage == i ? "active": ""}`
-            button-pagination=i
-          )
-            button(class='page-link') #{i}
-          
-        if(pagination.currentPage < pagination.totalPage)
-          li(class="page-item")
-            button(class='page-link'
-            button-pagination = pagination.currentPage + 1) Next
+  +pagination(pagination)
+  
