--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -12,7 +12,7 @@ html(lang="en")
         include ../partials/header.pug
         .body  
             include ../partials/sider.pug
-            .main main
+            .main 
                 block main
         //- include ../partials/footer.pug
         script(src="/js/script.js") 
