--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -13,13 +13,29 @@ block main
           +filter-status(filterStatus)
         .col-6 
           +search(keyword)
-          
+
+
+  .card.mb-3
+    .card-header Danh sách
+    .card-body
+      form(action="/$(prefixAdmin)/products/change-multi?_method=PATCH", method="POST", class="form-change-multi")
+        .d-flex.align-items-start
+          .form-group
+            select(name="type", class="form-control")
+              option(value="active") Hoạt động
+              option(value="inactive") Dùng hoạt động
+          .form-group
+            input(type="text", name="ids", value="", class="form-control")
+          button(type="submit", class="btn btn-primary") Áp dụng
+            
   .container.mt-5
     h2.text-center.mb-4 Products List
 
     table.table.table-striped.table-bordered
       thead.table-dark
         tr
+          th 
+            input(type="checkbox", name="checkall")
           th STT 
           th Image
           th Title
@@ -29,6 +45,8 @@ block main
       tbody
         each item, index in products
           tr
+            td 
+              input(type="checkbox", name="id", value = item.id)
             td #{index + 1}
             td
               img(src=item.thumbnail, alt=`Image of ${item.title}`, width="50", height="50")
