--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -66,13 +66,27 @@ block main
                   button-change-status 
                   class="btn btn-sm ml-1 btn-outline-success") Dừng hoạt động
             td
-              button.btn.btn-primary.btn-sm.mr-2(onclick=`editProduct(${item.id})`)  Edit  
-              button.btn.btn-danger.btn-sm(onclick=`deleteProduct(${item.id})`) Delete
+              //- button.btn.btn-primary.btn-sm.mr-2(onclick=`editProduct(${item.id})`)  Edit  
+              //- button.btn.btn-danger.btn-sm(onclick=`deleteProduct(${item.id})`) Delete
+              button(class="btn btn-warning btn-sm") Edit 
+              button(
+                class="btn btn-danger btn-sm"
+                button-delete
+                data-id = item.id
+              ) Delete
   +pagination(pagination)
   form(
     action=""
     method="POST"
     id="form-change-status"
     data-path=`${prefixAdmin}/products/change-status`
+  )
+  form(
+    action=""
+    method="POST"
+    id = "form-delete-item"
+    data-path = `${prefixAdmin}/products/delete`
+
+
   )
   script(src="/admin/js/product.js") 
