Create add new form

--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -23,8 +23,16 @@ block main
   .card.mb-3
     .card-header Danh sách
     .card-body
-      +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`)
-            
+      .row
+        .col-8 
+          +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`)
+        .col-4
+          a(
+            href=`${prefixAdmin}/products/create`
+            class="btn btn-outline-success"
+          ) + Add new
+        
+
   .container.mt-5
     h2.text-center.mb-4 Products List
     
