Add-prduct done:them slug

--- a/views/admin/mixins/alert.pug
+++ b/views/admin/mixins/alert.pug
@@ -1,3 +1,11 @@
+//- mixin alert-success(time)
+//-     - if (messages.success)
+//-     .message.info
+//-       div(
+//-         class="alert alert-success"
+//-         show-alert 
+//-         data-time = time
+//-       ) #{messages.success} <span close-alert>x</span>
 mixin alert-success(time)
     - if (messages.success)
     .message.info
