--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -5,6 +5,7 @@ block main
         action=`${prefixAdmin}/products/create`
         id="form-create-product"
         method="POST"
+        enctype="multipart/form-data"
     )
         div(class="form-group")
             label(for="title") Tiêu đề
@@ -34,7 +35,7 @@ block main
 
         div.form-group
             label(for="thumbnail") Ảnh
-            input(type="text", class="form-control", id="thumbnail", name="thumbnail")
+            input(type="file", class="form-control-file", id="thumbnail", name="thumbnail", accept="image/*", enctype="multipart/form-data")
 
         div.form-group
             label(for="position") Vị trí
