Done preview image

--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -197,3 +197,22 @@ footer {
     cursor: pointer;
   }
   
+
+  /* /* Image Prevew  */
+
+  .image-preview {
+    
+    width:150px;
+    height: auto;
+    margin-top: 15px;
+    border: 1px solid #ddd;
+
+    padding: 15px;
+    border-radius: 5px;
+  
+}
+ .image-preview[src=""] {
+    display: none;
+  }
+
+  /* End image preview */
