--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -196,4 +196,20 @@ footer {
     border-radius: 50%;
     cursor: pointer;
   }
+  /* Image preview */
+  .image-preview {
+    
+    width:150px;
+    height: auto;
+    margin-top: 15px;
+    border: 1px solid #ddd;
+
+    padding: 15px;
+    border-radius: 5px;
   
+}
+ .image-preview[src=""] {
+    display: none;
+  }
+
+  /* End image preview */
