--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -1,6 +1,9 @@
 extends ../../layouts/default.pug
+include ../../mixins/alert.pug
 
 block main
+    +alert-error(5000)
+    
     form(
         action=`${prefixAdmin}/products/create`
         id="form-create-product"
