--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -4,6 +4,7 @@ include ../../mixins/search.pug
 include ../../mixins/pagination.pug
 include ../../mixins/form-change-multi.pug
 include ../../mixins/alert.pug
+include ../../mixins/sort.pug
 block main
   +alert-success(5000)
   h1 PRODUCTS MANAGEMENT PAGE
@@ -18,6 +19,14 @@ block main
           +filter-status(filterStatus)
         .col-6 
           +search(keyword)
+
+  .card.mb-3
+    .card-header Sắp xếp
+    .card-body
+      .row
+        .col-4
+          +sort()
+          
 
 
   .card.mb-3
@@ -99,7 +108,7 @@ block main
                 class="btn btn-danger btn-sm"
                 button-delete
                 data-id = item.id
-              ) Delete
+              ) Delete  
   +pagination(pagination)
   form(
     action=""
