--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -19,3 +19,8 @@ html(lang="en")
         script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js")  
         script(src="/admin/js/script.js") 
+
+        //- TINY MCE 
+        script(src= "/tinymce/tinymce.min.js")
+        script(src= "/admin/js/tinymce-config.js")
+        //- END TINYMCE
