danh mục sản phẩm phần 1

--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -2,7 +2,10 @@
     .inner-menu 
         ul
             li
-                a(href="/admin/dashboard") dashboard        
+                a(href="/admin/dashboard") dashboard  
+        ul
+            li
+                a(href="/admin/products-category") category           
         ul
             li
                 a(href="/admin/products") products
