--- a/views/admin/pages/products-category/create.pug
+++ b/views/admin/pages/products-category/create.pug
@@ -1,5 +1,7 @@
 extends ../../layouts/default.pug
 include ../../mixins/alert.pug
+include ../../mixins/select-tree.pug
+
 
 block main
     +alert-error(5000)
@@ -20,15 +22,12 @@ block main
                 required
             )
         div(class="form-group")
-            label(for="parent_id") Danh mục
-            input(
-                type="text"
-                class="form-control"
-                id="parent_id"
-                name="parent_id"
-                
-            )
-        
+        label(for="parent_id") Danh mục
+        select(name="parent_id" id="parent_id" class="form-control")
+            option(value="") --Chọn Danh mục cha--
+            if (records)
+                +select-tree(records)
+
         div(class="form-group")
             label(for="desc") Mô tả
             textarea(
