--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -68,7 +68,7 @@ block main
           tr
             td 
               input(type="checkbox", name="id", value = item.id)
-            td #{index + 1}
+            td #{pagination.limitItems*(pagination.currentPage - 1) + (index + 1)}
             td
               img(src=item.thumbnail, alt=`Image of ${item.title}`, width="50", height="50")
             td #{item.title}
