--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -34,6 +34,16 @@ block main
                 value = product.description
             ) #{product.description}
 
+        div(class="form-group")
+            label(for="product_category_id") Danh mục
+            select(
+                name="product_category_id"
+                id="product_category_id"
+                class="form-control"
+            )
+                option(value="") -- Chọn danh mục --
+                if (category)
+                    +select-tree(category, 1, product.product_category_id)
              
 
 
