--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -1,5 +1,7 @@
 extends ../../layouts/default.pug
 include ../../mixins/alert.pug
+include ../../mixins/select-tree.pug
+
 
 block main
     +alert-error(5000)
@@ -28,6 +30,16 @@ block main
                 name="description"
                 rows="5"
             )
+        div(class="form-group")
+            label(for="product_category_id") Danh mục
+            select(
+                name="product_category_id"
+                id="product_category_id"
+                class="form-control"
+            )
+                option(value="") -- Chọn danh mục --
+                if (category)
+                    +select-tree(category)
         div.form-group
             label(for="price") Giá
             input(type="number", class="form-control", id="price", name="price", value="", min="0")
