add permissions.pug and route basic

--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -12,3 +12,6 @@
         ul
             li
                 a(href="/admin/roles") Roles
+        ul
+            li
+                a(href="/admin/roles/permissions") Permissions
