--- a/views/admin/pages/roles/create.pug
+++ b/views/admin/pages/roles/create.pug
@@ -2,7 +2,7 @@ extends ../../layouts/default.pug
 include ../../mixins/alert.pug
 block main
  
-  +alert-success(5000);
+  +alert-success(5000)
   h1(class="mb-4") Thêm mới nhóm quyền
   form(action=`${prefixAdmin}/roles/create`, method="POST") 
     div(class="form-group")
