sua trang danh sách tài khoản

--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -15,3 +15,6 @@
         ul
             li
                 a(href="/admin/roles/permissions") Permissions
+        ul
+            li
+                a(href="/admin/accounts") Accounts list
