add page logout and done

--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -5,3 +5,8 @@ header.header
                 .inner-logo
                     a(href='/admin/dashboard') ADMIN
             .col-9
+                div.text-right(style="padding-right: 20px; margin-right: 100px")
+                    a(
+                        href=`${prefixAdmin}/auth/logout`
+                        class="btn btn-primary btn-sm"
+                    ) Đăng xuất
