phan quyen cho cac dau muc

--- a/views/admin/mixins/table-tree.pug
+++ b/views/admin/mixins/table-tree.pug
@@ -17,35 +17,40 @@ mixin table-tree(items, level = 1)
           name="position"
         )
       td
-        if item.status === "active"
-          a(
-            href="javascript:;"
-            data-status=item.status
-            data-id=item.id
-            button-change-status
-            class="btn btn-sm ml-1 btn-outline-success"
-          ) Hoạt động
-        else
-          a(
-            href="javascript:;"
-            data-status=item.status
-            data-id=item.id
-            button-change-status
-            class="btn btn-sm ml-1 btn-outline-danger"
-          ) Dừng hoạt động
+        if(role.permissions.includes("products-category_edit"))
+          if item.status === "active"
+            a(
+              href="javascript:;"
+              data-status=item.status
+              data-id=item.id
+              button-change-status
+              class="btn btn-sm ml-1 btn-outline-success"
+            ) Hoạt động
+          else
+            a(
+              href="javascript:;"
+              data-status=item.status
+              data-id=item.id
+              button-change-status
+              class="btn btn-sm ml-1 btn-outline-danger"
+            ) Dừng hoạt động
       td
         a(
           href=`${prefixAdmin}/products-category/detail/${item.id}`
           class="btn btn-secondary btn-sm"
         ) Detail
-        a(
-          href=`${prefixAdmin}/products-category/edit/${item.id}`
-          class="btn btn-warning btn-sm"
-        ) Edit 
-        button(
-          class="btn btn-danger btn-sm"
-          button-delete
-          data-id=item.id
-        ) Delete
+        if(role.permissions.includes("products-category_edit"))
+
+          a(
+            href=`${prefixAdmin}/products-category/edit/${item.id}`
+            class="btn btn-warning btn-sm"
+          ) Edit 
+        if(role.permissions.includes("products-category_delete"))
+        
+          button(
+            class="btn btn-danger btn-sm"
+            button-delete
+            data-id=item.id
+          ) Delete
     if item.children && item.children.length > 0
       +table-tree(item.children, level + 1)
