--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -1,20 +1,22 @@
 doctype html
 html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        
-        link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css")
-        link(rel="stylesheet", href="/admin/css/style.css")
-        title #{pageTitle}
-    body 
-        //- include ../partials/header.pug
-        include ../partials/header.pug
-        .body  
-            include ../partials/sider.pug
-            .main 
-                block main
-        //- include ../partials/footer.pug
+    if(role.permissions.length > 0)
+        head
+            meta(charset="UTF-8")
+            meta(name="viewport", content="width=device-width, initial-scale=1.0")
+            
+            link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css")
+            link(rel="stylesheet", href="/admin/css/style.css")
+            title #{pageTitle}
+        body 
+            //- include ../partials/header.pug
+            include ../partials/header.pug
+            .body  
+                include ../partials/sider.pug
+                .main 
+                    block main
+            //- include ../partials/footer.pug
+    
         script(src="/js/script.js") 
         script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js")  
@@ -24,3 +26,6 @@ html(lang="en")
         script(src= "/tinymce/tinymce.min.js")
         script(src= "/admin/js/tinymce-config.js")
         //- END TINYMCE
+
+    else 
+        h1 KHONG CO QUYEN TRUY CAP
