--- a/views/admin/pages/products-category/index.pug
+++ b/views/admin/pages/products-category/index.pug
@@ -2,24 +2,26 @@ extends ../../layouts/default.pug
 include ../../mixins/table-tree.pug
 
 block main
-  h1 Danh mục sản phẩm
-  .card.mb-3
-    .card-header Danh sách
-    .card-body
-      .row
-        .col-8
-        .col-4
-          a(href=`${prefixAdmin}/products-category/create` class="btn btn-outline-success") + Thêm mới
-      table.table.table-striped.table-bordered(checkbox-multi)
-        thead.table-dark
-          tr
-            th 
-              input(type="checkbox", name="checkall")
-            th STT 
-            th Image
-            th Title
-            th Position
-            th Status
-            th Actions
-        tbody
-          +table-tree(records)
+  if(role.permissions.includes("products-category_view"))
+    h1 Danh mục sản phẩm
+    .card.mb-3
+      .card-header Danh sách
+      .card-body
+        .row
+          .col-8
+          .col-4
+            if(role.permissions.includes("products-category_create"))
+              a(href=`${prefixAdmin}/products-category/create` class="btn btn-outline-success") + Thêm mới
+        table.table.table-striped.table-bordered(checkbox-multi)
+          thead.table-dark
+            tr
+              th 
+                input(type="checkbox", name="checkall")
+              th STT 
+              th Image
+              th Title
+              th Position
+              th Status
+              th Actions
+          tbody
+            +table-tree(records)
