--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -6,122 +6,128 @@ include ../../mixins/form-change-multi.pug
 include ../../mixins/alert.pug
 include ../../mixins/sort.pug
 block main
-  +alert-success(5000)
-  h1 PRODUCTS MANAGEMENT PAGE
-  
-        
-
-  .card.mb-3
-    .card-header Bộ lọc và Tìm kiếm
-    .card-body
-      .row
-        .col-6
-          +filter-status(filterStatus)
-        .col-6 
-          +search(keyword)
-
-  .card.mb-3
-    .card-header Sắp xếp
-    .card-body
-      .row
-        .col-4
-          +sort()
+  if(role.permissions.includes("products_view"))
+    +alert-success(5000)
+    h1 PRODUCTS MANAGEMENT PAGE
+    
           
 
+    .card.mb-3
+      .card-header Bộ lọc và Tìm kiếm
+      .card-body
+        .row
+          .col-6
+            +filter-status(filterStatus)
+          .col-6 
+            +search(keyword)
 
-  .card.mb-3
-    .card-header Danh sách
-    .card-body
-      .row
-        .col-8 
-          +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`)
-        .col-4
-          a(
-            href=`${prefixAdmin}/products/create`
-            class="btn btn-outline-success"
-          ) + Add new
-        
+    .card.mb-3
+      .card-header Sắp xếp
+      .card-body
+        .row
+          .col-4
+            +sort()
+            
 
-  .container.mt-5
-    h2.text-center.mb-4 Products List
-    
-    //- table.table.table-striped.table-bordered
-    //- table(class="table table-hover table-sm"
-    //-       checkbox-multi
-    //- )
-    table(class="table table-striped table-bordered"
-          checkbox-multi
-    )
-      thead.table-dark
-        tr
-          th 
-            input(type="checkbox", name="checkall")
-          th STT 
-          th Image
-          th Title
-          th Price
-          th Position
-          th Status
-          th Actions
-      tbody
-        each item, index in products
+
+    .card.mb-3
+      .card-header Danh sách
+      .card-body
+        .row
+          .col-8 
+            if(role.permissions.includes("products_edit"))
+              +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`)
+          
+            .col-4
+              if(role.permissions.includes("products_create"))
+                a(
+                  href=`${prefixAdmin}/products/create`
+                  class="btn btn-outline-success"
+                ) + Add new
+            
+
+    .container.mt-5
+      h2.text-center.mb-4 Products List
+      
+      //- table.table.table-striped.table-bordered
+      //- table(class="table table-hover table-sm"
+      //-       checkbox-multi
+      //- )
+      table(class="table table-striped table-bordered"
+            checkbox-multi
+      )
+        thead.table-dark
           tr
-            td 
-              input(type="checkbox", name="id", value = item.id)
-            td #{pagination.limitItems*(pagination.currentPage - 1) + (index + 1)}
-            td
-              img(src=item.thumbnail, alt=`Image of ${item.title}`, width="50", height="50")
-            td #{item.title}
-            td #{item.price}$
-            td 
-              input(
-                type="number"
-                value=item.position 
-                style="width: 60px"
-                min="1"
-                name="position"
-              )
-            td
-              if (item.status === "active")
+            th 
+              input(type="checkbox", name="checkall")
+            th STT 
+            th Image
+            th Title
+            th Price
+            th Position
+            th Status
+            th Actions
+        tbody
+          each item, index in products
+            tr
+              td 
+                input(type="checkbox", name="id", value = item.id)
+              td #{pagination.limitItems*(pagination.currentPage - 1) + (index + 1)}
+              td
+                img(src=item.thumbnail, alt=`Image of ${item.title}`, width="50", height="50")
+              td #{item.title}
+              td #{item.price}$
+              td 
+                input(
+                  type="number"
+                  value=item.position 
+                  style="width: 60px"
+                  min="1"
+                  name="position"
+                )
+              td
+                if (item.status === "active")
+                  a(
+                    href="javascript:;"
+                    data-status = item.status
+                    data-id=item.id
+                    button-change-status
+                  class="btn btn-sm ml-1 btn-outline-success") Hoạt động
+                else
+                  a(
+                    data-status = item.status
+                    data-id=item.id
+                    button-change-status 
+                    class="btn btn-sm ml-1 btn-outline-success") Dừng hoạt động
+              td
+                //- button.btn.btn-primary.btn-sm.mr-2(onclick=`editProduct(${item.id})`)  Edit  
+                //- button.btn.btn-danger.btn-sm(onclick=`deleteProduct(${item.id})`) Delete
                 a(
-                  href="javascript:;"
-                  data-status = item.status
-                  data-id=item.id
-                  button-change-status
-                 class="btn btn-sm ml-1 btn-outline-success") Hoạt động
-              else
-                a(
-                  data-status = item.status
-                  data-id=item.id
-                  button-change-status 
-                  class="btn btn-sm ml-1 btn-outline-success") Dừng hoạt động
-            td
-              //- button.btn.btn-primary.btn-sm.mr-2(onclick=`editProduct(${item.id})`)  Edit  
-              //- button.btn.btn-danger.btn-sm(onclick=`deleteProduct(${item.id})`) Delete
-              a(
-                href=`${prefixAdmin}/products/detail/${item.id}`
-                class="btn btn-secondary btn-sm") Detail
-              a(
-                href=`${prefixAdmin}/products/edit/${item.id}`
-                class="btn btn-warning btn-sm") Edit 
-              button(
-                class="btn btn-danger btn-sm"
-                button-delete
-                data-id = item.id
-              ) Delete  
-  +pagination(pagination)
-  form(
-    action=""
-    method="POST"
-    id="form-change-status"
-    data-path=`${prefixAdmin}/products/change-status`
-  )
-  form(
-    action=""
-    method="POST"
-    id = "form-delete-item"
-    data-path = `${prefixAdmin}/products/delete`
+                  href=`${prefixAdmin}/products/detail/${item.id}`
+                  class="btn btn-secondary btn-sm") Detail
+                if(role.permissions.includes("products_edit"))
+                  a(
+                    href=`${prefixAdmin}/products/edit/${item.id}`
+                    class="btn btn-warning btn-sm") Edit 
+                if(role.permissions.includes("products_delete"))    
+                  button(
+                    class="btn btn-danger btn-sm"
+                    button-delete
+                    data-id = item.id
+                  ) Delete  
+    +pagination(pagination)
+    form(
+      action=""
+      method="POST"
+      id="form-change-status"
+      data-path=`${prefixAdmin}/products/change-status`
+    )
+    form(
+      action=""
+      method="POST"
+      id = "form-delete-item"
+      data-path = `${prefixAdmin}/products/delete`
 
 
-  )
-  script(src="/admin/js/product.js") 
+    )
+    script(src="/admin/js/product.js") 
