--- a/views/admin/pages/roles/index.pug
+++ b/views/admin/pages/roles/index.pug
@@ -1,35 +1,44 @@
 extends ../../layouts/default.pug
 
 block main
-  h1.mb-4 Nhóm quyền
-  .card.mb-3
-    .card-header Danh sách
-    .card-body
-      .row
-        .col-8
-        .col-4.text-right
-          a.btn.btn-outline-success(href=`${prefixAdmin}/roles/create`) + Thêm mới
-  table.table.table-hover.table-sm
-    thead
-      tr
-        th STT
-        th Nhóm quyền
-        th Mô tả ngắn
-        th Hành động
-    tbody
-      if records.length > 0
-        each item, index in records
-          tr
-            td #{index + 1}
-            td #{item.title}
-            td #{item.description}
-            td
-              a.btn.btn-secondary.btn-sm(href=`${prefixAdmin}/roles/detail/${item.id}`)
-                | Chi tiết
-              a.btn.btn-warning.btn-sm.ml-1(href=`${prefixAdmin}/roles/edit/${item.id}`)
-                | Sửa
-              button.btn.btn-danger.btn-sm.ml-1
-                | Xóa
-      else
+  if(role.permissions.includes("roles_view"))
+
+    h1.mb-4 Nhóm quyền
+    .card.mb-3
+      .card-header Danh sách
+      .card-body
+        .row
+          .col-8
+          .col-4.text-right
+            if(role.permissions.includes("roles_create"))
+              a.btn.btn-outline-success(href=`${prefixAdmin}/roles/create`) + Thêm mới
+    table.table.table-hover.table-sm
+      thead
         tr
-          td(colspan="4" class="text-center") Chưa có nhóm quyền nào được tạo.
+          th STT
+          th Nhóm quyền
+          th Mô tả ngắn
+          th Hành động
+      tbody
+        if records.length > 0
+          each item, index in records
+            tr
+              td #{index + 1}
+              td #{item.title}
+              td #{item.description}
+              td
+                a.btn.btn-secondary.btn-sm(href=`${prefixAdmin}/roles/detail/${item.id}`)
+                  | Chi tiết
+
+                if(role.permissions.includes("roles_edit"))
+                
+                  a.btn.btn-warning.btn-sm.ml-1(href=`${prefixAdmin}/roles/edit/${item.id}`)
+                    | Sửa
+
+                if(role.permissions.includes("roles_delete"))
+                
+                  button.btn.btn-danger.btn-sm.ml-1
+                    | Xóa
+        else
+          tr
+            td(colspan="4" class="text-center") Chưa có nhóm quyền nào được tạo.
