--- a/views/admin/pages/roles/permissions.pug
+++ b/views/admin/pages/roles/permissions.pug
@@ -1,127 +1,160 @@
 extends ../../layouts/default.pug
 include ../../mixins/alert.pug
 block main
-    +alert-success(5000)
-    h1(class="mb-4") Phân quyền
+    if(role.permissions.includes("roles_permissions"))
     
-    if(records)
-        div(data-records= records)
-        div(class="text-right")
-            button(
-                type="submit"
-                class="btn btn-primary mb-3"
-                button-submit
-            ) Cập nhật
+        +alert-success(5000)
+        h1(class="mb-4") Phân quyền
+        
+        if(records)
+            div(data-records= records)
+            div(class="text-right")
+                button(
+                    type="submit"
+                    class="btn btn-primary mb-3"
+                    button-submit
+                ) Cập nhật
 
-        table(class="table table-hover table-sm" table-permissions)
-            thead
-                tr
-                    th Tính năng
+            table(class="table table-hover table-sm" table-permissions)
+                thead
+                    tr
+                        th Tính năng
+                        each item in records
+                            th(class="text-center") #{item.title}
+                tbody
+                    tr(data-name="id")
+                    td
                     each item in records
-                        th(class="text-center") #{item.title}
-            tbody
-                tr(data-name="id")
-                  td
-                  each item in records
-                    td(class="text-center d-none") 
-                     input(type="text" value=item.id) 
+                        td(class="text-center d-none") 
+                        input(type="text" value=item.id) 
 
-                //- DANH MỤC SẢN PHẨM 
-                tr
-                    td(colspan="4")
-                        b Danh mục sản phẩm
-                tr(data-name="roles-category_view")
-                    td Xem
-                    each item in records
-                        td(class="text-center")
-                            input(type="checkbox")
-                    
-                tr(data-name="roles-category_create")
-                    td Thêm mới
-                    each item in records
-                        td(class="text-center")
-                            input(type="checkbox")
-                    
-                tr(data-name="products-category_edit")
-                    td Chỉnh sửa
-                    each item in records
-                        td(class="text-center")
-                            input(type="checkbox")
-                    
-                tr(data-name="products-category_delete")
-                    td Xóa
-                    each item in records
-                        td(class="text-center")
-                            input(type="checkbox")
-                            
-                //- DANH Sách sản phẩm
-                tr
-                    td(colspan="4")
-                        b Danh sách sản phẩm
-                tr(data-name="products_view")
-                    td Xem
-                    each item in records
-                        td(class="text-center")
-                            input(type="checkbox")
-                    
-                tr(data-name="products_create")
-                    td Thêm mới
-                    each item in records
-                        td(class="text-center")
-                            input(type="checkbox")
-                    
-                tr(data-name="products_edit")
-                    td Chỉnh sửa
-                    each item in records
-                        td(class="text-center")
-                            input(type="checkbox")
-                    
-                tr(data-name="products_delete")
-                    td Xóa
-                    each item in records
-                        td(class="text-center")
-                            input(type="checkbox")
+                    //- DANH MỤC SẢN PHẨM 
+                    tr
+                        td(colspan="4")
+                            b Danh mục sản phẩm
+                    tr(data-name="products-category_view")
+                        td Xem
+                        each item in records
+                            td(class="text-center")
+                                input(type="checkbox")
+                        
+                    tr(data-name="products-category_create")
+                        td Thêm mới
+                        each item in records
+                            td(class="text-center")
+                                input(type="checkbox")
+                        
+                    tr(data-name="products-category_edit")
+                        td Chỉnh sửa
+                        each item in records
+                            td(class="text-center")
+                                input(type="checkbox")
+                        
+                    tr(data-name="products-category_delete")
+                        td Xóa
+                        each item in records
+                            td(class="text-center")
+                                input(type="checkbox")
+                                
+                    //- DANH Sách sản phẩm
+                    tr
+                        td(colspan="4")
+                            b Danh sách sản phẩm
+                    tr(data-name="products_view")
+                        td Xem
+                        each item in records
+                            td(class="text-center")
+                                input(type="checkbox")
+                        
+                    tr(data-name="products_create")
+                        td Thêm mới
+                        each item in records
+                            td(class="text-center")
+                                input(type="checkbox")
+                        
+                    tr(data-name="products_edit")
+                        td Chỉnh sửa
+                        each item in records
+                            td(class="text-center")
+                                input(type="checkbox")
+                        
+                    tr(data-name="products_delete")
+                        td Xóa
+                        each item in records
+                            td(class="text-center")
+                                input(type="checkbox")
 
-                //- nhóm quyền 
-                tr
-                    td(colspan="4")
-                        b Phân quyền
-                tr(data-name="roles_view")
-                    td Xem
-                    each item in records
-                        td(class="text-center")
-                            input(type="checkbox")
-                    
-                tr(data-name="roles_create")
-                    td Thêm mới
-                    each item in records
-                        td(class="text-center")
-                            input(type="checkbox")
-                    
-                tr(data-name="roles_edit")
-                    td Chỉnh sửa
-                    each item in records
-                        td(class="text-center")
-                            input(type="checkbox")
-                    
-                tr(data-name="roles_delete")
-                    td Xóa
-                    each item in records
-                        td(class="text-center")
-                            input(type="checkbox")
-                tr(data-name="roles_permissions")
-                    td Nhóm quyền
-                    each item in records
-                        td(class="text-center")
-                            input(type="checkbox")
+                    //- nhóm quyền 
+                    tr
+                        td(colspan="4")
+                            b Phân quyền
+                    tr(data-name="roles_view")
+                        td Xem
+                        each item in records
+                            td(class="text-center")
+                                input(type="checkbox")
+                        
+                    tr(data-name="roles_create")
+                        td Thêm mới
+                        each item in records
+                            td(class="text-center")
+                                input(type="checkbox")
+                        
+                    tr(data-name="roles_edit")
+                        td Chỉnh sửa
+                        each item in records
+                            td(class="text-center")
+                                input(type="checkbox")
+                        
+                    tr(data-name="roles_delete")
+                        td Xóa
+                        each item in records
+                            td(class="text-center")
+                                input(type="checkbox")
+                    tr(data-name="roles_permissions")
+                        td Nhóm quyền
+                        each item in records
+                            td(class="text-center")
+                                input(type="checkbox")
 
 
-    form( 
-        id="form-change-permissions" 
-        method="POST" 
-        class="d-none"
-        action=`${prefixAdmin}/roles/permissions?_method=PATCH`) 
-        div.form-group 
-            input.form-control( type="text" name="permissions" )                        
+                    //- Danh sách tài khoản
+                    tr
+                        td(colspan="4")
+                            b Chức năng của tài khoản
+                    tr(data-name="accounts_view")
+                        td Xem
+                        each item in records
+                            td(class="text-center")
+                                input(type="checkbox")
+                        
+                    tr(data-name="accounts_create")
+                        td Thêm mới
+                        each item in records
+                            td(class="text-center")
+                                input(type="checkbox")
+                        
+                    tr(data-name="accounts_edit")
+                        td Chỉnh sửa
+                        each item in records
+                            td(class="text-center")
+                                input(type="checkbox")
+                        
+                    tr(data-name="accounts_delete")
+                        td Xóa
+                        each item in records
+                            td(class="text-center")
+                                input(type="checkbox")
                     
-    script(src="/admin/js/roles.js", type="")
+
+
+
+        form( 
+            id="form-change-permissions" 
+            method="POST" 
+            class="d-none"
+            action=`${prefixAdmin}/roles/permissions?_method=PATCH`) 
+            div.form-group 
+                input.form-control( type="text" name="permissions" )                        
+                        
+        script(src="/admin/js/roles.js", type="")
