--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -11,4 +11,11 @@ block main
           +box-head("Sản phẩm nổi bật")
       
       +product-grid(productsFeatured)
+  section.section-products-new.my-5
+    .container
+      .row
+        .col-12
+          +box-head("Sản phẩm mới cho ra lò")
+      
+      +product-grid(productsNew)
         
