--- a/views/admin/pages/products-category/create.pug
+++ b/views/admin/pages/products-category/create.pug
@@ -24,13 +24,13 @@ block main
                     name="title"
                     required
                 )
-            div(class="form-group")
-                label(for="product_category_id") Danh mục
-                input(
-                    name="product_category_id"
-                    id="product_category_id"
-                    class="form-control"
-                )
+            //- div(class="form-group")
+            //-     label(for="product_category_id") Danh mục
+            //-     input(
+            //-         name="product_category_id"
+            //-         id="product_category_id"
+            //-         class="form-control"
+            //-     )
                     //- option(value="") -- Chọn danh mục --
                     //- if (records)
                     //-     +select-tree(records)
